--- a/src/applet/downloadAppletTest.html
+++ b/src/applet/downloadAppletTest.html
@@ -12,13 +12,19 @@
 	<applet code="DownloadApplet.class" width="1" height="1" codebase="http://download.powerfolder.com/pro/applet">
 	</applet>
 	<div id="Distribution_Win32withJava">
-		<a href="http://download.powerfolder.com/pro/PowerFolder_Latest_Win32_with_JRE_Installer.exe">Download (WinJRE)</a>
+		<a href="http://download.powerfolder.com/pro/PowerFolder_Latest_Win32_with_JRE_Installer.exe">
+		<img src="/powerfolder-clean/fileadmin/images/buttons/Download_new.gif" alt="Download (WinWithJRE)"/>
+		</a>
 	</div>
 	<div id="Distribution_Win32withoutJava" style="visibility: hidden">
-		<a href="http://download.powerfolder.com/pro/PowerFolder_Latest_Win32_Installer.exe">Download (WinNoJRE)</a>
+		<a href="http://download.powerfolder.com/pro/PowerFolder_Latest_Win32_Installer.exe">
+		<img src=="/powerfolder-clean/fileadmin/images/buttons/Download_new.gif" alt="Download (WinNoJRE)"/>
+		</a>
 	</div>
 	<div id="Distribution_WebStart" style="visibility: hidden">
-		<a href="http://download.powerfolder.com/pro/webstart/PowerFolder.jnlp">Download (WebStart)</a>
+		<a href="http://download.powerfolder.com/pro/webstart/PowerFolder.jnlp">
+		<img src=="/powerfolder-clean/fileadmin/images/buttons/Download_new.gif" alt="Download (WebStart)"/>
+		</a>
 	</div>
 	
     </BODY>
